Color Contrast error fix

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   --secondary: #edecff;
   --secondary-head: #9490ff;
   --basic: #191765;
-  --basic-head: #7d73fc;
+  --basic-head: #595959;
   --text: #c8c8d4;
   --white: #fff;
 }
